# quick-image-highlight

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sbt  launch4j.xml
project/: plugin.sbt
src/: exchange.rs  main.rs  render.rs  state.rs  transform.rs
src/main/scala/com/webcerebrium/: QuickImageHighlight.scala
src/main/scala/com/webcerebrium/quick_image/: ContentNoImage.scala  CurrentImage.scala  ImageChoser.scala  QuickImageHighlight.scala  TopPanel.scala
