[package]
name = "quick-image-highlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arboard = "3.2"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
dirs = "5.0.1"
image = "0.24"
imageproc = "0.23.0"
softbuffer = "0.3.0"
winit = "0.28.6"
